(4.2.5p135) 2008/09/23 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1072] clock_update should not allow updates older than sys_epoch.
(4.2.5p134) 2008/09/17 Released by Harlan Stenn <stenn@ntp.org>
* Clean up build process for ntpsnmpd.
(4.2.5p133) 2008/09/16 Released by Harlan Stenn <stenn@ntp.org>
* Add options processing to ntpsnmpd.
* [Bug 1062] Check net-snmp headers before deciding to build ntpsnmpd.
* Clean up the libntpq.a build.
* Regenerate ntp_parser.[ch] from ntp_parser.y
(4.2.5p132) 2008/09/15 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1067] Multicast DNS service registration must come after the fork
  on Solaris.
* [Bug 1066] Error messages should log as errors.
(4.2.5p131) 2008/09/14 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1065] Re-enable support for the timingstats file.
(4.2.5p130) 2008/09/13 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1064] Implement --with-net-snmp-config=progname
* [Bug 1063] ntpSnmpSubagentObject.h is missing from the distribution.
(4.2.5p129) 2008/09/11 Released by Harlan Stenn <stenn@ntp.org>
* Quiet some libntpq-related warnings.
(4.2.5p128) 2008/09/08 Released by Harlan Stenn <stenn@ntp.org>
* Import Heiko Gerstung's GSoC2008 NTP MIB daemon.
(4.2.5p127) 2008/09/01 Released by Harlan Stenn <stenn@ntp.org>
* Regenerate ntpd/ntp_parser.c
(4.2.5p126) 2008/08/31 Released by Harlan Stenn <stenn@ntp.org>
* Stop libtool-1.5 from looking for C++ or Fortran.
* [BUG 610] Documentation update for NMEA reference clock driver.
* [Bug 828] Fix IPv4/IPv6 address parsing.
* Changes from Dave Mills:
  Documentation updates.
  Fix a corner case where a frequency update was reported but not set.
  When LEAP_NOTINSYNC->LEAP_NOWARNING, call crypto_update() if we have
  crypto_flags.
(4.2.5p125) 2008/08/18 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1052] Add linuxPPS support to ONCORE driver.
(4.2.5p124) 2008/08/17 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.